--- a/telegram-weather-bot/package.json
+++ b/telegram-weather-bot/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "mongoose": "^8.8.2",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
